[gd_scene load_steps=2 format=3 uid="uid://lm1xledlm3yo"]

[ext_resource type="Script" uid="uid://bv07hvrjl01id" path="res://src/UI/GameOver.gd" id="1_eqxxm"]

[node name="GameOverMenu" type="Control"]
process_mode = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eqxxm")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.437
anchor_top = 0.31
anchor_right = 0.63600004
anchor_bottom = 0.395
offset_left = -8.424011
offset_top = -15.880005
offset_right = -7.672058
offset_bottom = -15.960007
theme_override_font_sizes/font_size = 40
text = "GAME OVER"

[node name="GameOverButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.637
anchor_right = 0.63900006
anchor_bottom = 1.0
offset_left = -131.0
offset_top = -11.776001
offset_right = 36.87195
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="TryAgain" type="Button" parent="GameOverButtonContainer"]
process_mode = 2
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "jugar de nuevo"

[node name="MainMenu" type="Button" parent="GameOverButtonContainer"]
process_mode = 2
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Menu principal"

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -31.0
offset_right = 117.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2

[node name="LevelLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -78.0
offset_right = 129.0
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="GameOverButtonContainer/TryAgain" to="." method="_on_try_again_pressed"]
[connection signal="pressed" from="GameOverButtonContainer/MainMenu" to="." method="_on_main_menu_pressed"]
